--- a/src/layouts/index.njk
+++ b/src/layouts/index.njk
@@ -66,7 +66,7 @@
         <li class="blog__item">
           <article class="blog-post">
             <a href="#" class="blog-post__link">
-              <img src="/assets/img/blog-post-image.jpg" alt="" class="blog-post__image">
+              <img src="#" alt="" class="blog-post__image">
               <time class="blog-post__time" datetime="2021-02-19">19 февраля 2021</time>
               <h3 class="blog-post__title">
                 средняя подборка плагинов на&nbsp;чистом css для однообразных задач
@@ -77,7 +77,7 @@
         <li class="blog__item">
           <article class="blog-post">
             <a href="#" class="blog-post__link">
-              <img src="/assets/img/blog-post-image.jpg" alt="" class="blog-post__image">
+              <img src="#" alt="" class="blog-post__image">
               <time class="blog-post__time" datetime="2021-02-19">19 февраля 2021</time>
               <h3 class="blog-post__title">
                 средняя подборка плагинов на&nbsp;чистом css для однообразных задач
