временно убрал отзывы консультаций

--- a/src/layouts/consult.njk
+++ b/src/layouts/consult.njk
@@ -98,7 +98,7 @@
     </div>
   </section>
 
-  <section class="consult-testimonial">
+  {# <section class="consult-testimonial">
     <div class="container">
       <h2 class="title consult-testimonial__title">отзывы</h2>
       <ul class="consult-testimonial__list">
@@ -155,7 +155,7 @@
         </li>
       </ul>
     </div>
-  </section>
+  </section> #}
 
   <section class="format">
     <div class="container">
