добавил отзывы о консультациях (2)

--- a/src/layouts/consult.njk
+++ b/src/layouts/consult.njk
@@ -98,64 +98,47 @@
     </div>
   </section>
 
-  {# <section class="consult-testimonial">
+  <section class="consult-testimonial">
     <div class="container">
       <h2 class="title consult-testimonial__title">отзывы</h2>
       <ul class="consult-testimonial__list">
         <li class="consult-testimonial__item">
           <article class="work-testimonial__item testimonial">
-            <h3 class="testimonial__title visually-hidden">Отзыв заказчика Кристины</h3>
+            <h3 class="testimonial__title visually-hidden">Отзыв от Tako`v Web</h3>
             <div class="testimonial__image">
-              <img src="/assets/img/testimonial-image.jpg" alt="ФИО Заказчика">
+              <img src="/assets/img/takov.jpg" alt="Фото Tako`v Web">
             </div>
             <div class="testimonial__info">
-              <div class="testimonial__name">Кристина</div>
-              <div class="testimonial__post">менеджер проектов phigital</div>
+              <div class="testimonial__name">Tako`v Web</div>
+              <div class="testimonial__post">web-разработчик</div>
               <p class="testimonial__text">
-                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
-                факта:
-                дальнейшее развитие различных форм деятельности требует определения и&nbsp;уточнения.
+                Совсем недавно мне предложили сверстать один сайт, но&nbsp;я&nbsp;не&nbsp;был уверен, хватит&nbsp;ли у&nbsp;меня опыта. Я&nbsp;решил обратиться к&nbsp;Максиму за&nbsp;помощью как к&nbsp;ментору.
+                Могу сказать, что я&nbsp;остался очень доволен работой такого формата.
+                Мы&nbsp;держали связь по&nbsp;скайпу, что было очень удобно и&nbsp;наглядно.
+                Максим очень терпеливо отвечает на&nbsp;все вопросы, регулярно даёт обратную связь, даже вне уроков, что в&nbsp;является очень важным фактором.
+                Я&nbsp;остался очень доволен! Рекомендую Максима, как большого профессионала в&nbsp;области вёрстки и&nbsp;преподавании в&nbsp;целом.
               </p>
             </div>
           </article>
         </li>
         <li class="consult-testimonial__item">
           <article class="work-testimonial__item testimonial">
-            <h3 class="testimonial__title visually-hidden">Отзыв заказчика Кристины</h3>
+            <h3 class="testimonial__title visually-hidden">Отзыв Александра</h3>
             <div class="testimonial__image">
-              <img src="/assets/img/testimonial-image.jpg" alt="ФИО Заказчика">
+              <img src="/assets/img/alex.jpg" alt="Фото Александра">
             </div>
             <div class="testimonial__info">
-              <div class="testimonial__name">Кристина</div>
-              <div class="testimonial__post">менеджер проектов phigital</div>
+              <div class="testimonial__name">Александр</div>
+              <div class="testimonial__post">web-разработчик</div>
               <p class="testimonial__text">
-                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
-                факта:
-                дальнейшее развитие различных форм деятельности требует определения и&nbsp;уточнения.
-              </p>
-            </div>
-          </article>
-        </li>
-        <li class="consult-testimonial__item">
-          <article class="work-testimonial__item testimonial">
-            <h3 class="testimonial__title visually-hidden">Отзыв заказчика Кристины</h3>
-            <div class="testimonial__image">
-              <img src="/assets/img/testimonial-image.jpg" alt="ФИО Заказчика">
-            </div>
-            <div class="testimonial__info">
-              <div class="testimonial__name">Кристина</div>
-              <div class="testimonial__post">менеджер проектов phigital</div>
-              <p class="testimonial__text">
-                Высокий уровень вовлечения представителей целевой аудитории является четким доказательством простого
-                факта:
-                дальнейшее развитие различных форм деятельности требует определения и&nbsp;уточнения.
+                Спасибо Максиму за&nbsp;подробный разбор вёрстки сайта. Согласовав удобное время, в&nbsp;режиме он-лайн разобрали сайт на&nbsp;наличие ошибок в&nbsp;целом, по&nbsp;семантике, получил полезные советы и&nbsp;рекомендации. Так&nbsp;же после разбора сохраняется запись, что тоже является огромным плюсом)
               </p>
             </div>
           </article>
         </li>
       </ul>
     </div>
-  </section> #}
+  </section>
 
   <section class="format">
     <div class="container">
