обновил условия работы js

--- a/src/layouts/consult.njk
+++ b/src/layouts/consult.njk
@@ -39,7 +39,7 @@
         <li class="themes__item">
           <h3 class="themes__subtitle">js</h3>
           <p class="themes__descr">
-            поговорим на тему javascript, разберем сложные моменты
+            поговорим на тему javascript (в плане верстки), разберем создание различных элементов для сайта
           </p>
         </li>
         <li class="themes__item">
