--- a/src/layouts/consult.njk
+++ b/src/layouts/consult.njk
@@ -19,7 +19,6 @@
         <ul class="contacts__list">
           <li class="contacts__item"><a href="{{ metadata.telegram }}" target="_blank" class="contacts__link">telegram</a></li>
           <li class="contacts__item"><a href="{{ metadata.vk }}" target="_blank" class="contacts__link">vk</a></li>
-          <li class="contacts__item"><a href="{{ metadata.whatsapp }}" target="_blank" class="contacts__link">whatsapp</a></li>
         </ul>
         <a href="mailto:{{ metadata.email }}" class="contacts__mail">{{ metadata.email }}</a>
       </div>
@@ -148,18 +147,9 @@
           <article class="format__block">
             <h3 class="format__subtitle">Стандарт</h3>
             <p class="format__descr">
-              За один час разберем ваш вопрос. Пишите в телеграм для заявки.
+              За один час разберем ваш вопрос. Это может быть скайп-консультация или просто записанное мной видео с ответами на вопросы
             </p>
-            <span class="format__price">900 руб</span>
-          </article>
-        </li>
-        <li class="format__item" style="background-image: url('/assets/img/format-2.svg');">
-          <article class="format__block">
-            <h3 class="format__subtitle">Длительный</h3>
-            <p class="format__descr">
-              Беседа длиной в два часа. Подойдет, если у вас сложный вопрос по проекту.
-            </p>
-            <span class="format__price">1500 руб</span>
+            <span class="format__price">1000 руб</span>
           </article>
         </li>
       </ul>
