Правит сайт, добавляет раздел разработок, меняет логотип

--- a/src/includes/header.njk
+++ b/src/includes/header.njk
@@ -56,7 +56,9 @@ style="width:88px; height:31px; border:0;" alt="Яндекс.Метрика" tit
       <nav class="nav header__nav">
         <ul class="nav__list">
           <li class="nav__item"><a href="/about/" class="nav__link">обо мне</a></li>
-          <li class="nav__item"><a href="/consult/" class="nav__link">менторство</a></li>
+          <li class="nav__item"><a href="/code-review/" class="nav__link">код-ревью</a></li>
+          <li class="nav__item"><a href="/devs/" class="nav__link">разработки</a></li>
+          <li class="nav__item"><a href="{{ metadata.youtube }}" target="_blank" class="nav__link">youtube</a></li>
           <li class="nav__item"><a href="{{ metadata.blog }}" target="_blank" class="nav__link">блог</a></li>
         </ul>
       </nav>
