--- a/src/layouts/consult.njk
+++ b/src/layouts/consult.njk
@@ -27,42 +27,24 @@
 
   <section class="themes">
     <div class="container">
-      <h2 class="title themes__title">консультирую по темам:</h2>
+      <h2 class="title themes__title">как все проходит:</h2>
       <ul class="themes__list grid">
         <li class="themes__item">
-          <h3 class="themes__subtitle">html/css</h3>
+          <div class="themes__subtitle">Шаг 1</div>
           <p class="themes__descr">
-            разберем любую тему, связанную с языками html и css
+            пишете мне в телеграм/на почту
           </p>
         </li>
         <li class="themes__item">
-          <h3 class="themes__subtitle">js</h3>
+          <div class="themes__subtitle">Шаг 2</div>
           <p class="themes__descr">
-            поговорим на тему javascript (в плане верстки), разберем создание различных элементов для сайта
+            договариваемся о времени (если это созвон), или договариваемся о записи видео
           </p>
         </li>
         <li class="themes__item">
-          <h3 class="themes__subtitle">доступность</h3>
+          <div class="themes__subtitle">Шаг 3</div>
           <p class="themes__descr">
-            расскажу, как сделать свои сайты доступнее для людей с ограниченными возможностями
-          </p>
-        </li>
-        <li class="themes__item">
-          <h3 class="themes__subtitle">ошибки и баги</h3>
-          <p class="themes__descr">
-            посмотрим ваш проект, устраним ошибки и доведем его до завершения
-          </p>
-        </li>
-        <li class="themes__item">
-          <h3 class="themes__subtitle">код-ревью</h3>
-          <p class="themes__descr">
-            тщательно проверю ваш сайт на валидность, доступность, баги и прочее
-          </p>
-        </li>
-        <li class="themes__item">
-          <h3 class="themes__subtitle">инструменты</h3>
-          <p class="themes__descr">
-            расскажу, какими инструментами нужно пользоваться для быстрой и удобной разработки
+            разбираю вашу верстку, объясняю ошибки, даю рекомендации по исправлению
           </p>
         </li>
       </ul>
@@ -141,27 +123,21 @@
 
   <section class="format">
     <div class="container">
-      <h2 class="title format__title">формат консультаций</h2>
+      <h2 class="title format__title">формат код-ревью</h2>
       <ul class="format__list grid">
         <li class="format__item" style="background-image: url('/assets/img/format-1.svg');">
           <article class="format__block">
             <h3 class="format__subtitle">Стандарт</h3>
             <p class="format__descr">
-              За один час разберем ваш вопрос. Это может быть скайп-консультация или просто записанное мной видео с ответами на вопросы
+              Один час код-ревью. Это может быть как созвон, так и просто записанное видео.
+              Если занимаемся меньше часа - вычитаю время и платите меньше.
             </p>
-            <span class="format__price">1000 руб</span>
+            <span class="format__price">1500 руб</span>
           </article>
         </li>
       </ul>
     </div>
   </section>
-
-  <section class="sale">
-    <div class="container sale__container">
-      <h2 class="sale__title">скидка 10% на первую консультацию</h2>
-    </div>
-  </section>
-
 </main>
 
 {% include 'footer-consult.njk' %}
