--- a/src/layouts/index.njk
+++ b/src/layouts/index.njk
@@ -16,7 +16,6 @@
         <ul class="contacts__list">
           <li class="contacts__item"><a href="{{ metadata.telegram }}" target="_blank" class="contacts__link">telegram</a></li>
           <li class="contacts__item"><a href="{{ metadata.vk }}" target="_blank" class="contacts__link">vk</a></li>
-          <li class="contacts__item"><a href="{{ metadata.whatsapp }}" target="_blank" class="contacts__link">whatsapp</a></li>
         </ul>
         <a href="mailto:{{ metadata.email }}" class="contacts__mail">{{ metadata.email }}</a>
       </div>
@@ -48,7 +47,7 @@
     <div class="container">
       <h2 class="title blog__title">блог</h2>
       <p class="blog__descr">
-        веду свой блог на <a href="{{ metadata.youtube }}" target="_blank" class="link">youtube.com</a> и <a href="{{ metadata.blog }}" target="_blank" class="link">blog.maxgraph.ru</a>
+        веду свой блог на <a href="{{ metadata.youtube }}" target="_blank" class="link">youtube.com</a> и <a href="{{ metadata.blog }}" target="_blank" class="link">verstaem.online</a>
       </p>
       <ul class="blog__list grid">
         <li class="blog__item">
