--- a/src/includes/footer.njk
+++ b/src/includes/footer.njk
@@ -10,7 +10,9 @@
         <nav class="nav footer__nav">
           <ul class="nav__list">
             <li class="nav__item"><a href="/about/" class="nav__link">обо мне</a></li>
-            <li class="nav__item"><a href="/consult/" class="nav__link">менторство</a></li>
+            <li class="nav__item"><a href="/code-review/" class="nav__link">код-ревью</a></li>
+            <li class="nav__item"><a href="/devs/" class="nav__link">разработки</a></li>
+            <li class="nav__item"><a href="{{ metadata.youtube }}" target="_blank" class="nav__link">youtube</a></li>
             <li class="nav__item"><a href="{{ metadata.blog }}" target="_blank" class="nav__link">блог</a></li>
           </ul>
         </nav>
