Добавляет новый отзыв, новую разработку

--- a/src/layouts/consult.njk
+++ b/src/layouts/consult.njk
@@ -60,7 +60,7 @@
         <ul class="why__list grid">
           <li class="why__item" style="background-image: url('/assets/img/why-1.svg');">
             <h3 class="why__subtitle">большой опыт</h3>
-            <p class="why__descr">занимаюсь веб-разработкой более 5-ти лет</p>
+            <p class="why__descr">занимаюсь веб-разработкой более 7-ти лет</p>
           </li>
           <li class="why__item" style="background-image: url('/assets/img/why-2.svg');">
             <h3 class="why__subtitle">грамотный фидбек</h3>
@@ -68,7 +68,7 @@
           </li>
           <li class="why__item" style="background-image: url('/assets/img/why-3.svg');">
             <h3 class="why__subtitle">удобный формат</h3>
-            <p class="why__descr">личные онлайн-консультации в zoom, discord, skype</p>
+            <p class="why__descr">личные онлайн-консультации в zoom, discord, skype, google meet</p>
           </li>
           <li class="why__item" style="background-image: url('/assets/img/why-4.svg');">
             <h3 class="why__subtitle">видимый результат</h3>
@@ -113,6 +113,21 @@
               <div class="testimonial__post">web-разработчик</div>
               <p class="testimonial__text">
                 Спасибо Максиму за&nbsp;подробный разбор вёрстки сайта. Согласовав удобное время, в&nbsp;режиме он-лайн разобрали сайт на&nbsp;наличие ошибок в&nbsp;целом, по&nbsp;семантике, получил полезные советы и&nbsp;рекомендации. Так&nbsp;же после разбора сохраняется запись, что тоже является огромным плюсом)
+              </p>
+            </div>
+          </article>
+        </li>
+        <li class="consult-testimonial__item">
+          <article class="work-testimonial__item testimonial">
+            <h3 class="testimonial__title visually-hidden">Отзыв Михаила</h3>
+            <div class="testimonial__image">
+              <img src="/assets/img/mikhail.jpg" alt="Фото Михаила">
+            </div>
+            <div class="testimonial__info">
+              <div class="testimonial__name">Михаил</div>
+              <div class="testimonial__post">web-разработчик</div>
+              <p class="testimonial__text">
+                Занимаюсь разработкой на начальном уровне. Обратившись к Максиму за помощью, смог на собственном проекте оценить профессионализм и широкий кругозор по всем аспектам верстки Максима. Буквально в течение часа Максим разобрал весь код многостраничного сайта. Нашел и поправил все ошибки. Дал четкие рекомендации по дальнейшей разработке. И все это без подготовки, в режиме онлайн под видеозапись! Просто феноменальные профессиональные качества! Консультация с Максимом оставила чувство глубокого удовлетворения результатом и вдохновила на дальнейший собственный рост в изучении frontend. Спасибо Максиму за его труд и неравнодушное отношение. Просто, доступно и с душой!
               </p>
             </div>
           </article>
